Code cleaned and comments added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       </nav>
     </header>
     <section>
+      <!-- This div is for showing food details -->
       <div id="foodDetails"></div>
 
       <div class="search">
