Enter key search added and style improved

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
       </div>
       <div id="search-result"></div>
     </section>
+    <footer>
+      <ishtiak>2021- || All rights by rserved.</ishtiak>
+    </footer>
     <script src="app.js"></script>
   </body>
 </html>
