--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div id="search-result"></div>
     </section>
     <footer>
-      <ishtiak>2021- || All rights by rserved.</ishtiak>
+      <ishtiak>All rights by reserved || 2021-</ishtiak>
     </footer>
     <script src="app.js"></script>
   </body>
